# voicechat-discord

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle  build.gradle.kts  changelog.md  gradle.properties  license  readme.md  settings.gradle  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-assign.yml  build.yml  (+2 more)
buildSrc/: build.gradle.kts
bukkit/: build.gradle
common/: build.gradle  build.gradle.kts
core/: .gitignore  Cargo.toml  Cross.toml  build.gradle.kts  copy_natives.sh  shell.nix
core/.cargo/: config.toml
core/src/main/java/dev/amsam0/voicechatdiscord/: Constants.java  Core.java  DiscordBot.java  GroupManager.java  LibraryLoader.java  Platform.java  SubCommands.java  UpdateChecker.java  VoicechatPlugin.java
core/src/main/java/dev/amsam0/voicechatdiscord/util/: BiMap.java  Util.java
core/src/main/java/dev/naturecodevoid/voicechatdiscord/: Constants.java  Core.java  DiscordBot.java  GroupManager.java  LibraryLoader.java  Platform.java  SubCommands.java  UpdateChecker.java  VoicechatPlugin.java
core/src/main/java/dev/naturecodevoid/voicechatdiscord/audiotransfer/: AudioCore.java  DiscordBot.java
core/src/main/java/dev/naturecodevoid/voicechatdiscord/util/: BiMap.java  Util.java
core/src/main/rust/: audio_util.rs  lib.rs  logging.rs  runtime.rs
core/src/main/rust/discord_bot/: discord_receive.rs  discord_speak.rs  jni.rs  log_in.rs  mod.rs  start.rs  svc_receive.rs
fabric/: build.gradle  build.gradle.kts
paper/: build.gradle  build.gradle.kts
(+60 files in other folders)
