[package]
name = "voicechat-discord"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/main/rust/lib.rs"

[profile.release]
opt-level = "z"   # on macOS aarch64, "z" gave 4.8 MB, "s" gave around 5 MB, and 3 gave around 8 MB
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
dashmap = "5.5.3"
discortp = "0.6.0"
eyre = "0.6.12"
flume = "0.11.0"
jni = "0.21.1"
once_cell = "1.19.0"
parking_lot = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.tokio]
version = "1.38.0"
features = ["rt-multi-thread", "parking_lot", "time"]

[dependencies.serenity]
version = "0.12.2"
default-features = false
features = ["rustls_backend", "chrono", "client", "http", "model"]

[dependencies.songbird]
version = "0.4.1"
features = ["receive"]

[dependencies.symphonia]
version = "0.5.4"
features = ["pcm"]
